# bosszhipin-auto

./: .gitignore  1.html  AGENTS.md  README.md  analyze.py  config.toml  main.py  plan.md  pyproject.toml  pyrightconfig.json  scrape_jobs.py  start.bat  test.py  test_chat_page.py  test_job_detail.py  test_unread_notifications.py
.agents/skills/page-layout-analyzer/: SKILL.md
extension/: background.js  content.js  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: options.html  options.ts
extension/src/background/: execute.ts  handlers.ts  index.ts  query-engine.ts  socket.ts  tab-manager.ts
extension/src/protocol/: types.ts
flows/: scrape.py
pages/: job_list.py
scripts/: bosszhipin-remote.user.js  enrich_job_tags.py  fetch_boss_cities.py  migrate_tinydb_to_sqlite.py
server/: __init__.py  api.py  main.py  registry.py  session.py
src/bzauto/: __init__.py  __main__.py  analyze.py  config.py  enums.py  filter.py  models.py  models_doc.py  notify.py  results.py  scheduler.py  scrape_chat_auto.py  scrape_jobs.py  storage.py  task_runner.py  unread_watcher.py
src/bzauto/browser/: __init__.py  events.py  js_helper.py  manager.py  overlay.py  session.py  types.py
src/bzauto/flows/: __init__.py  base.py  delete_chat.py  dispatch.py  scan.py  scrape.py  scrape_chat.py  scrape_manual.py  scrape_only.py  scrape_scheduled.py  urge.py
src/bzauto/pages/: __init__.py  base.py  chat_list.py  header.py  job_detail.py  job_list.py
src/bzauto/protocol/: __init__.py  types.py
src/bzauto/server/: __init__.py  api.py  app.py  lifecycle.py  registry.py  remote_session.py  session.py  tab_session.py
src/bzauto/ui/: __init__.py  (+9 more)
(+1 files in other folders)
