[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bzauto"
version = "0.2.0"
description = "Boss直聘自动化 — QWebEngineView 桌面浏览器控制"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "pyside6>=6.6.0",
    "tinydb>=4.8.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "tomli_w>=1.0.0",
    "pydantic>=2.13.4",
    "qasync>=0.27.0",
]

[project.scripts]
boss-analyze = "bzauto.analyze:cli_main"
boss-scrape = "bzauto.scrape_jobs:cli_main"
boss-scrape-chat = "bzauto.scrape_chat_auto:cli_main"
boss-ui = "bzauto.ui:run_ui"

[tool.mypy]
strict = true
warn_return_any = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bzauto = ["py.typed"]
